--- a/index.html
+++ b/index.html
@@ -12,9 +12,42 @@
 </head>
 
 <body>
-
-  
- </div>
+ 
+<div class="contetn row">
+  <div class="options-box col-md-5">
+    <div class="options">
+      <span>1</span>
+      <button id="firstBtn"  class="option-btn">Choose title</button>
+    </div>
+    <div class="options">
+      <span>2</span>
+      <button id="secondBtn"  class="option-btn">Choose description</button>
+    </div>
+    <div class="options">
+      <span>3</span>
+      <button id="thirdBtn" class="option-btn">Confirm data</button>
+    </div>
+  </div>
+  <div class="inner-box  col-md-7">
+    <div id="innerOne" class="inner-one">
+      <p class="inner-text">Choose title content</p>
+      <button id="firstRow" class="inner-btn">Submit title</button>
+    </div>
+    <div id="innerTwo" class="inner-two">
+      <p class="inner-text">Choose description content</p>
+      <button id="secondRowPrev" class="inner-btn">Back</button>
+      <button id="secondRowNext" class="inner-btn">Submit description</button>
+    </div>
+    <div id="innerThree" class="inner-three">
+      <p class="inner-text">Are you happy now?</p>
+      <button id="thirdRowPrev" class="inner-btn">No, go back</button>
+      <button  id="thirdRowNext" class="inner-btn">Yes, go ahead</button>
+    </div>
+    <div id="innerFour" class="inner-four">
+      <p class="inner-text">Ok, we're done.Thanks for sending us your data!</p>
+    </div>
+  </div>
+</div>
 
 
   <script src="js/main.js">
