--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
  
 <div class="contetn row">
-  <div class="options-box col-md-5">
+  <div class="options-box col-xs-12 col-md-5">
     <div class="options">
       <span>1</span>
       <button id="firstBtn"  class="option-btn">Choose title</button>
@@ -28,7 +28,7 @@
       <button id="thirdBtn" class="option-btn">Confirm data</button>
     </div>
   </div>
-  <div class="inner-box  col-md-7">
+  <div class="inner-box col-xs-12 col-md-7">
     <div id="innerOne" class="inner-one">
       <p class="inner-text">Choose title content</p>
       <button id="firstRow" class="inner-btn">Submit title</button>
